[project]
name = "sample-rye"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Takumi Kanada", email = "candy12t@gmail.com" }
]
dependencies = ["flask~=2.3.2"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest~=7.3.1"]
[tool.hatch.metadata]
allow-direct-references = true
